z-index fix for menu

--- a/web/src/styles/menu/menu-styles.css
+++ b/web/src/styles/menu/menu-styles.css
@@ -1,6 +1,6 @@
 .menu {
   position: relative;
-  z-index: 1;
+  z-index: 2;
 }
 
 .menu__icon {
